--- a/src/pages/Evang/Post/24-03-2023.md
+++ b/src/pages/Evang/Post/24-03-2023.md
@@ -1,9 +1,12 @@
 ---
-layout: ../../../components/Layaut.astro
+layout: '../layoutEvangelios.astro'
 title: Evangelsio segun MAteo
 
 ---
+# Introducción
 
-# holamundo
+Puedo vincular internamente a [mi conclusión](#conclusión) en la misma página cuando escribo Markdown.
 
-como estas men
+## Conclusión
+
+Puedo usar la URL `https://mi-dominio.com/page-1/#introducción` para navegar directamente a mi Introducción en la página.
